
- DTrace:
  . Disabled PHP call tracing by default (it makes significant overhead).
    This may be enabled again using envirionment variable USE_ZEND_DTRACE=1.
    (Dmitry)

- JSON:
  . Fixed bug #73526 (php_json_encode depth issue). (Jakub Zelenka)

- Mysqlnd:
  . Fixed bug #64526 (Add missing mysqlnd.* parameters to php.ini-*). (cmb)

- ODBC:
  . Fixed bug #73448 (odbc_errormsg returns trash, always 513 bytes).
    (Anatol)

- Opcache:
  . Fixed bug #69090 (check cached files permissions). (dmitry)
  . Fixed bug #73546 (Logging for opcache has an empty file name). (mhagstrand)

- PCRE:
  . Fixed bug #73483 (Segmentation fault on pcre_replace_callback). (Laruence)
  . Fixed bug #73392 (A use-after-free in zend allocator management). 
    (Laruence)

- PDO_Firebird:
  . Fixed bug #73087, #61183, #71494 (Memory corruption in bindParam).
    (Dorin Marcoci)

- Phar:
  . Fixed bug #73580 (Phar::isValidPharFilename illegal memory access). (Stas)

- Postgres:
  . Fixed bug #73498 (Incorrect SQL generated for pg_copy_to()). (Craig Duncan)

- Soap:
  . Fixed bug #73538 (SoapClient::__setSoapHeaders doesn't overwrite SOAP
    headers). (duncan3dc)
  . Fixed bug #73452 (Segfault (Regression for #69152)). (Dmitry)

- SPL:
  . Fixed bug #73423 (Reproducible crash with GDB backtrace). (Laruence)

- SQLite3:
  . Fixed bug #73530 (Unsetting result set may reset other result set). (cmb)

- Standard:
  . Fixed bug #73297 (HTTP stream wrapper should ignore HTTP 100 Continue).
    (rowan dot collins at gmail dot com)
  . Fixed bug #73645 (version_compare illegal write access). (Stas)

- Wddx:
  . Fixed bug #73631 (Invalid read when wddx decodes empty boolean element).
    (Stas)
- XML:
  . Fixed bug #72135 (malformed XML causes fault) (edgarsandi)

10 Nov 2016 PHP 7.0.13

- Core:
  . Fixed bug #73350 (Exception::__toString() cause circular references).
    (Laruence)
  . Fixed bug #73181 (parse_str() without a second argument leads to crash).
    (Nikita)